--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -1,16 +1,20 @@
-<div class="typeform-widget" data-url="https://javascriptroom.typeform.com/to/SCt8T4" data-transparency="100"></div>
-<div class="form-creds"> powered by
-  <a href="https://admin.typeform.com/signup?utm_campaign=SCt8T4&utm_source=typeform.com-12306397-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" target="_blank">
-      Typeform
-  </a>
-</div>
+<a
+  class="typeform-share button btn-main"
+  href="https://javascriptroom.typeform.com/to/SCt8T4"
+  data-mode="popup"
+  data-hide-headers="true"
+  data-hide-footer="true"
+  target="_blank"
+>
+  Send request
+</a>
 <script>
   (function () {
     var qs, js, q, s, d = document,
       gi = d.getElementById,
       ce = d.createElement,
       gt = d.getElementsByTagName,
-      id = "typef_orm",
+      id = "typef_orm_share",
       b = "https://embed.typeform.com/";
     if (!gi.call(d, id)) {
       js = ce.call(d, "script");
