Add meta mobile

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,8 @@
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script src="/assets/vendor/particles.min.js"></script>
   <script src="/assets/js/main.js"></script>
 </head>
