--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -42,3 +42,20 @@ h2 {
   text-decoration: none;
   z-index: 1;
 }
+
+#btn-jobs {
+  display: block;
+  position: absolute;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  color: #fff;
+  margin-top: auto;
+  padding: 5px 15px;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+  width: auto;
+  text-decoration: none;
+  z-index: 1;
+  bottom: 10px;
+}
