--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -1,5 +1,5 @@
 <a
-  class="typeform-share button btn-main"
+  class="typeform-share btn btn-main"
   href="https://javascriptroom.typeform.com/to/SCt8T4"
   data-mode="popup"
   data-hide-headers="true"
