--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -3,4 +3,5 @@
     <a class="fab fa-facebook-square btn-social" href="https://www.facebook.com/roomjs/" title="Facebook"></a>
     <a class="fab fa-twitter-square btn-social" href="https://twitter.com/room_js" title="Twitter"></a>
     <a class="fab fa-telegram-plane btn-social" href="https://t.me/room_js" title="Telegram"></a>
+    <a class="fab fa-slack btn-social" href="http://roomjs.stream/slack" title="Slack chat"></a>
 </div>
