--- a/_sass/socialbuttons.scss
+++ b/_sass/socialbuttons.scss
@@ -6,14 +6,20 @@
 
 .btn-social {
   color: #fff;
-  font-size: 50px;
-  margin-right: 20px;
+  font-size: 45px;
+  margin-right: 15px;
   position: relative;
   display: inline-block;
   z-index: 1;
   text-decoration: none;
+  transition: all .2s ease-in-out;
 
   &:last-child {
     margin-right: 0;
+  }
+
+  &:hover {
+    color: #f0f0f0;
+    transform: scale(1.10) translateY(-3px);
   }
 }
