--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -18,7 +18,9 @@ html {
 }
 
 h1 {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 700;
+  font-size: 35px;
   margin: 0;
 }
 
@@ -26,7 +28,8 @@ h2 {
   margin: 10px 0;
   line-height: 30px;
   font-size: 20px;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 600;
 }
 
 .btn-main {
@@ -35,9 +38,9 @@ h2 {
   border-radius: 10px;
   color: #fff;
   padding: 10px 30px;
-  text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Roboto Mono', sans-serif;
   font-size: 20px;
+  font-weight: 600;
   width: auto;
   text-decoration: none;
   z-index: 1;
@@ -52,7 +55,7 @@ h2 {
   margin-top: auto;
   padding: 5px 15px;
   text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Roboto Mono', sans-serif;
   font-size: 16px;
   width: auto;
   text-decoration: none;
