--- a/_sass/socialbuttons.scss
+++ b/_sass/socialbuttons.scss
@@ -1,25 +1,39 @@
+@import "_variables";
+
 .social-buttons {
-  margin-top: 20px;
-  padding-top: 20px;
-  border-top: 2px dashed #fff;
+  margin: 20px 0;
+  border-top: 2px dashed $blue;
+  border-bottom: 2px dashed $blue;
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+  z-index: 1;
+  padding: 10px 0;
 }
 
 .btn-social {
-  color: #fff;
+  color: $blue;
   font-size: 45px;
-  margin-right: 15px;
   position: relative;
-  display: inline-block;
-  z-index: 1;
+  display: block;
   text-decoration: none;
   transition: all .2s ease-in-out;
+  width: 25%;
+  text-align: center;
+  margin: 10px 0;
 
   &:last-child {
     margin-right: 0;
   }
 
   &:hover {
-    color: #f0f0f0;
+    color: darken($blue, 20%);
     transform: scale(1.10) translateY(-3px);
   }
+}
+
+.patreon-btn-container {
+  width: 176px;
+  margin-top: 10px;
+  z-index: 1;
 }
