--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -1,7 +1,55 @@
 <div class="social-buttons">
-    <a class="fab fa-instagram btn-social" href="https://www.instagram.com/room_js/" title="Instagram"></a>
-    <a class="fab fa-facebook-square btn-social" href="https://www.facebook.com/roomjs/" title="Facebook"></a>
-    <a class="fab fa-twitter-square btn-social" href="https://twitter.com/room_js" title="Twitter"></a>
-    <a class="fab fa-telegram-plane btn-social" href="https://t.me/room_js" title="Telegram"></a>
-    <a class="fab fa-slack btn-social" href="http://roomjs.stream/slack" title="Slack chat"></a>
+    <a
+        class="fab fa-instagram btn-social"
+        href="https://www.instagram.com/room_js/"
+        target="_blank"
+        title="Instagram"
+    ></a>
+    <a
+        class="fab fa-facebook-square btn-social"
+        href="https://www.facebook.com/roomjs/"
+        target="_blank"
+        title="Facebook"
+    ></a>
+    <a
+        class="fab fa-twitter-square btn-social"
+        href="https://twitter.com/room_js"
+        target="_blank"
+        title="Twitter"
+    ></a>
+    <a
+        class="fab fa-youtube btn-social"
+        href="https://www.youtube.com/channel/UCGT8sh9T27ZqXjyPdODdP8g"
+        target="_blank"
+        title="YouTube"
+    ></a>
+    <a
+        class="fab fa-telegram-plane btn-social"
+        href="https://t.me/room_js"
+        target="_blank"
+        title="Telegram"
+    ></a>
+    <a
+        class="fab fa-twitch btn-social"
+        href="https://www.twitch.tv/room_js"
+        target="_blank"
+        title="Twitch"
+    ></a>
+    <a
+        class="fab fa-slack btn-social"
+        href="http://roomjs.stream/slack"
+        target="_blank"
+        title="Slack chat"
+    ></a>
+    <a
+        class="fab fa-github btn-social"
+        href="https://github.com/room-js"
+        target="_blank"
+        title="GitHub"
+    ></a>
+</div>
+<div class="patreon-btn-container">
+    <a href="https://www.patreon.com/bePatron?u=12704782" data-patreon-widget-type="become-patron-button">
+        Become a Patron!
+    </a>
 </div>
