--- a/_sass/particles.scss
+++ b/_sass/particles.scss
@@ -9,7 +9,7 @@ canvas {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #9ccafc;
+  background-color: #282c34;
   display: flex;
   justify-content: center;
   flex-direction: column;
