--- a/_sass/socialbuttons.scss
+++ b/_sass/socialbuttons.scss
@@ -34,6 +34,9 @@
 
 .patreon-btn-container {
   width: 176px;
+  height: 36px;
   margin-top: 10px;
+  margin-bottom: 50px;
   z-index: 1;
+  overflow: hidden;
 }
