--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -28,20 +28,22 @@ h2 {
   font-weight: 600;
 }
 
-.btn-jobs {
-  display: block;
+.footer-btn-container {
   position: absolute;
-  border: 2px solid $green;
-  border-radius: 6px;
-  color: $green;
   margin-top: auto;
-  padding: 5px 15px;
-  text-transform: uppercase;
-  font-size: 16px;
-  width: auto;
-  text-decoration: none;
   z-index: 1;
   bottom: 20px;
+
+  .btn {
+    padding: 5px 15px;
+    text-transform: uppercase;
+    font-size: 16px;
+    text-decoration: none;
+    border: 2px solid $green;
+    border-radius: 6px;
+    color: $green;
+    margin: 0 5px;
+  }
 }
 
 .btn {
