Update discord link

--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -36,10 +36,10 @@
         title="Twitch"
     ></a>
     <a
-        class="fab fa-slack btn-social"
-        href="http://roomjs.stream/slack"
+        class="fab fa-discord btn-social"
+        href="http://roomjs.stream/discord"
         target="_blank"
-        title="Slack chat"
+        title="Discord chat"
     ></a>
     <a
         class="fab fa-github btn-social"
