Change social buttons

--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -6,16 +6,16 @@
         title="Instagram"
     ></a>
     <a
+        class="fab fa-codepen btn-social"
+        href="https://codepen.io/room_js"
+        target="_blank"
+        title="Codepen"
+    ></a>
+    <a
         class="fab fa-facebook-square btn-social"
         href="https://www.facebook.com/roomjs/"
         target="_blank"
         title="Facebook"
-    ></a>
-    <a
-        class="fab fa-twitter-square btn-social"
-        href="https://twitter.com/room_js"
-        target="_blank"
-        title="Twitter"
     ></a>
     <a
         class="fab fa-youtube btn-social"
@@ -30,16 +30,16 @@
         title="Telegram"
     ></a>
     <a
+        class="fab fa-twitter-square btn-social"
+        href="https://twitter.com/room_js"
+        target="_blank"
+        title="Twitter"
+    ></a>
+    <a
         class="fab fa-twitch btn-social"
         href="https://www.twitch.tv/room_js"
         target="_blank"
         title="Twitch"
-    ></a>
-    <a
-        class="fab fa-discord btn-social"
-        href="http://roomjs.stream/discord"
-        target="_blank"
-        title="Discord chat"
     ></a>
     <a
         class="fab fa-github btn-social"
