--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,10 @@
-<script src="/assets/vendor/particles.min.js"></script>
 <script src="/assets/js/main.js"></script>
-<script src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+<script
+  async
+  src="//cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"
+  onload="window.initParticlesJS()"
+></script>
+<script src="//c6.patreon.com/becomePatronButton.bundle.js" async></script>
 
 <script>
   (function () {
