--- a/_includes/ga.html
+++ b/_includes/ga.html
@@ -1,6 +1,6 @@
 {% if jekyll.environment == 'production' %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.gauid }}"></script>
+<script async src="//www.googletagmanager.com/gtag/js?id={{ site.gauid }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
