--- a/_includes/ga.html
+++ b/_includes/ga.html
@@ -1,7 +1,7 @@
 {% if jekyll.environment == 'production' %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="//www.googletagmanager.com/gtag/js?id={{ site.gauid }}"></script>
-<script>
+<script async defer src="//www.googletagmanager.com/gtag/js?id={{ site.gauid }}"></script>
+<script async defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
