--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,5 @@
 <head>
-  {% include ga.html %}
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}" async>
   <link href="//fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" async>
   <link href="//fonts.googleapis.com/css?family=Titillium+Web:400,600,700" rel="stylesheet" async>
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.1.0/css/brands.css" integrity="sha384-7xAnn7Zm3QC1jFjVc1A6v/toepoG3JXboQYzbM0jrPzou9OFXm/fY6Z/XiIebl/k" crossorigin="anonymous" async>
@@ -8,12 +7,12 @@
 
   <title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-  <link rel="manifest" href="/favicons/site.webmanifest">
-  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" async>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" async>
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" async>
+  <link rel="manifest" href="/favicons/site.webmanifest" async>
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5" async>
+  <link rel="shortcut icon" href="/favicons/favicon.ico" async>
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
