Replace twitch with dev.to

--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -42,10 +42,10 @@
         rel="noopener noreferrer"
     ></a>
     <a
-        class="fab fa-twitch btn-social"
-        href="https://www.twitch.tv/room_js"
+        class="fab fa-dev btn-social"
+        href="https://dev.to/room_js"
         target="_blank"
-        title="Twitch"
+        title="Dev.to"
         rel="noopener noreferrer"
     ></a>
     <a
