--- a/_sass/socialbuttons.scss
+++ b/_sass/socialbuttons.scss
@@ -2,8 +2,7 @@
 
 .social-buttons {
   margin: 20px 0;
-  border-top: 2px dashed $blue;
-  border-bottom: 2px dashed $blue;
+  border: 2px solid $green;
   display: flex;
   flex-wrap: wrap;
   width: 300px;
@@ -12,7 +11,7 @@
 }
 
 .btn-social {
-  color: $blue;
+  color: $green;
   font-size: 45px;
   position: relative;
   display: block;
@@ -32,11 +31,12 @@
   }
 }
 
-.patreon-btn-container {
-  width: 176px;
-  height: 36px;
-  margin-top: 10px;
-  margin-bottom: 50px;
-  z-index: 1;
-  overflow: hidden;
+@media screen and (min-width: 765px) {
+  .social-buttons {
+    width: 620px;
+  }
+
+  .btn-social {
+    width: 12.5%;
+  }
 }
