--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/WebPage">
-    {% include head.html %}
-    <body>
-        {{ content }}
-        {%  include scripts.html %}
-    </body>
+  {% include head.html %}
+  <body>
+    <div class="main-container">
+      {{ content }}
+    </div>
+    {%  include scripts.html %}
+  </body>
 </html>
 
