--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -1,12 +1,15 @@
 @import "_variables";
 
+// mobile first
+
 body,
 html {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   font-family: 'Roboto Mono', sans-serif;
   color: $grey;
+  background-color: $dark;
 }
 
 * {
@@ -14,54 +17,88 @@ html {
 }
 
 h1 {
-  font-family: 'Titillium Web', sans-serif;
-  font-weight: 700;
-  font-size: 35px;
+  font-family: 'Teko', sans-serif;
+  font-weight: 500;
+  letter-spacing: 3px;
+  font-size: 45px;
   margin: 0;
+}
+
+#logo {
+  width: 300px;
+  height: auto;
 }
 
 h2 {
   margin: 10px 0;
   line-height: 30px;
   font-size: 22px;
-  font-family: 'Titillium Web', sans-serif;
-  font-weight: 600;
+  letter-spacing: 2px;
+  font-family: 'Teko', sans-serif;
+  font-weight: 400;
+  color: $grey;
 }
 
-.footer-btn-container {
-  position: absolute;
-  margin-top: auto;
-  z-index: 1;
-  bottom: 20px;
+.main-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  .btn {
-    padding: 5px 15px;
-    text-transform: uppercase;
-    font-size: 16px;
-    text-decoration: none;
-    border: 2px solid $green;
-    border-radius: 6px;
-    color: $green;
-    margin: 0 5px;
-  }
+.btn-container {
+  width: 320px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn {
+  display: block;
+  width: 300px;
+  font-family: 'Teko', sans-serif;
+  letter-spacing: 3px;
+  padding: 5px 15px;
+  text-transform: uppercase;
+  font-size: 26px;
+  text-decoration: none;
+  border: 2px solid $green;
+  border-radius: 0;
+  color: $green;
+  margin: 10px;
   transition: all .2s ease-in-out;
 
   &:hover {
     color: $blue;
     border-color: $blue;
   }
+
+  &.blue {
+    color: $blue;
+    border-color: $blue;
+
+    &:hover {
+      color: $grey;
+      border-color: $grey;
+    }
+  }
 }
 
-.contact-email {
-  width: 300px;
-  text-align: center;
-  font-size: 16px;
-  margin: 10px 0;
+// tablet and desktop
+@media screen and (min-width: 765px) {
+  #logo {
+    width: 620px;
+  }
 
-  span {
-    text-transform: uppercase;
+  h2 {
+    font-size: 56px;
+    margin: 30px 0;
+  }
+
+  .btn-container {
+    width: 80vw;
   }
 }
