--- a/css/main.scss
+++ b/css/main.scss
@@ -2,4 +2,4 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
-@import "common", "particles", "socialbuttons";
+@import "common", "socialbuttons";
