--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -5,7 +5,7 @@
 body,
 html {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   font-family: 'Roboto Mono', sans-serif;
   color: $grey;
@@ -41,6 +41,7 @@ h2 {
 
 .main-container {
   height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
