--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -77,6 +77,11 @@ h2 {
     border-color: $blue;
   }
 
+  .fas {
+    width: 40px;
+    text-align: center;
+  }
+
   &.blue {
     color: $blue;
     border-color: $blue;
