--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -32,7 +32,7 @@ h1 {
 h2 {
   margin: 10px 0;
   line-height: 30px;
-  font-size: 22px;
+  font-size: 20px;
   letter-spacing: 2px;
   font-family: 'Teko', sans-serif;
   font-weight: 400;
@@ -77,7 +77,7 @@ h2 {
     border-color: $blue;
   }
 
-  .fas {
+  .fas, .fab {
     font-size: 22px;
     width: 34px;
     text-align: center;
@@ -101,7 +101,7 @@ h2 {
   }
 
   h2 {
-    font-size: 56px;
+    font-size: 45px;
     margin: 30px 0;
   }
 
