--- a/_sass/socialbuttons.scss
+++ b/_sass/socialbuttons.scss
@@ -1,10 +1,10 @@
 @import "_variables";
 
 .social-buttons {
-  margin: 20px 0;
-  border: 2px solid $green;
+  margin: 10px 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   width: 300px;
   z-index: 1;
   padding: 10px 0;
@@ -17,8 +17,8 @@
   display: block;
   text-decoration: none;
   transition: all .2s ease-in-out;
-  width: 25%;
   text-align: center;
+  width: 25%;
   margin: 10px 0;
 
   &:last-child {
@@ -37,6 +37,6 @@
   }
 
   .btn-social {
-    width: 12.5%;
+    width: auto;
   }
 }
