--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -28,7 +28,8 @@ h1 {
   margin: 0;
 }
 
-#logo {
+#logo,
+.projects {
   width: 300px;
   height: auto;
 }
@@ -102,6 +103,12 @@ h1 {
     --angle: 0deg;
     border-image: linear-gradient(var(--angle), $blue, $green) 1;
     animation: 5s rotate linear infinite;
+
+    &:hover {
+      color: $grey;
+      border-color: $grey;
+      border-image: none;
+    }
   }
 }
 
@@ -148,7 +155,9 @@ h1 {
 
 // tablet and desktop
 @media screen and (min-width: 765px) {
-  #logo {
+  #logo,
+  .projects
+  {
     width: 620px;
   }
 
@@ -166,5 +175,30 @@ h1 {
     width: 620px;
     font-size: 22px;
     line-height: 30px;
+  }
+}
+
+.projects {
+  color: $grey;
+  margin: 0 0 20px;
+  padding: 20px;
+  line-height: 2em;
+  white-space: break-spaces;
+  background:
+    linear-gradient(to right, $grey 2px, transparent 2px) 0 0,
+    linear-gradient(to right, $grey 2px, transparent 2px) 0 100%,
+    linear-gradient(to left, $grey 2px, transparent 2px) 100% 0,
+    linear-gradient(to left, $grey 2px, transparent 2px) 100% 100%,
+    linear-gradient(to bottom, $grey 2px, transparent 2px) 0 0,
+    linear-gradient(to bottom, $grey 2px, transparent 2px) 100% 0,
+    linear-gradient(to top, $grey 2px, transparent 2px) 0 100%,
+    linear-gradient(to top, $grey 2px, transparent 2px) 100% 100%;
+  background-repeat: no-repeat;
+  background-size: 15px 15px;
+
+  a {
+    color: $grey;
+    text-decoration: underline;
+    font-weight: 600;
   }
 }
